--- a/index.html
+++ b/index.html
@@ -234,7 +234,7 @@
 
                 <div> <a href="#">Indardanus </a> &copy; All Right Reserved</div>
                 
-                <div> Designed by <a target="_blank" href="https://mastermayankw3spaces.com" target="_blank"> Mayank </a> </div>
+                <div> Designed by <a href="https://mastermayank.w3spaces.com" target="_blank"> Mayank </a> </div>
 
             </h6>
 
