--- a/index.html
+++ b/index.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
 <!--
 -   Website-0 "indardanus"
--   AllRightReserved Mayank
--   Designed by Mayank
--   HTML : ./index
+-   Copyright by https://github.com/MayankDevil/
+-   Designed | Developed by Mayank
+-   HTML : ./index.html
 -->
 <html lang="en">
 
