--- a/index.html
+++ b/index.html
@@ -50,13 +50,15 @@
                 <!-- service -->
                 <div class="service">
 
-                    <a href="#" class="btn" id="dark-mode-btn"> Body Theme &nbsp; &ShortRightArrow; </a>
-                    <a href="#theory" class="btn"> Colour Theory &nbsp; &ShortRightArrow; </a>
-                    <a href="#contrast" class="btn"> Colour Contrast &nbsp; &ShortRightArrow; </a>
-                    <a href="#name" class="btn"> Colour Name &nbsp; &ShortRightArrow; </a>
-                    <a href="#nice" class="btn"> Nice Colour Package &nbsp; &ShortRightArrow; </a>
-                    <a href="#theme" class="btn"> Theme Compare &nbsp; &ShortRightArrow; </a>
-                    <a href="#footer" class="btn"> About Us &nbsp; &ShortRightArrow; </a>
+                    <a href="#" class="btn" id="dark-mode-btn"> Body Theme &ShortRightArrow;</a>
+                    <a href="#theory" class="btn"> Colour Theory &ShortRightArrow;</a>
+                    <a href="#contrast" class="btn"> Colour Contrast &ShortRightArrow;</a>
+                    <a href="#name" class="btn"> Colour Name &ShortRightArrow;</a>
+                    <a href="#nice" class="btn"> Nice Colour Scheme &ShortRightArrow;</a>
+                    <a href="#theme" class="btn"> Theme Selection &ShortRightArrow;</a>
+                    <a href="#bootstrap" class="btn"> Bootstrap Colour &ShortRightArrow;</a>
+                    <a href="gradient.html" class="btn"> Gradient Colour &ShortRightArrow;</a>
+                    <a href="#footer" class="btn"> About Me  &ShortRightArrow;</a>
 
                 </div>
             
@@ -234,7 +236,7 @@
 
                 <div> <a href="#">Indardanus </a> &copy; All Right Reserved</div>
                 
-                <div> Designed by <a href="https://mastermayankw3space.com" target="_blank"> Mayank </a> </div>
+                <div> Designed by <a href="https://mastermayank.w3spaces.com" target="_blank"> Mayank </a> </div>
 
             </h6>
 
